[gd_scene load_steps=15 format=2]

[ext_resource path="res://objects/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/tiles/tiles_solid.tres" type="TileSet" id=2]
[ext_resource path="res://objects/door.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/room.gd" type="Script" id=4]
[ext_resource path="res://objects/key.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/hud.gd" type="Script" id=6]
[ext_resource path="res://objects/shrine.tscn" type="PackedScene" id=7]
[ext_resource path="res://objects/env/spike.tscn" type="PackedScene" id=8]
[ext_resource path="res://objects/enemy_spawner.tscn" type="PackedScene" id=9]
[ext_resource path="res://objects/enemies/slime.tscn" type="PackedScene" id=10]
[ext_resource path="res://scripts/map.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 768, 448 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 768, 896 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1152, 448 )

[node name="world" type="Node2D"]

[node name="camera2" type="Camera2D" parent="."]
position = Vector2( 2384, 1088 )
current = true
zoom = Vector2( 5, 5 )
limit_left = -1000000
limit_top = -1000000
limit_right = 100000
limit_bottom = 100000
limit_smoothed = true
offset_v = -0.5

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 0, 458781, 0, 0, 458782, 0, 0, 458783, 0, 0, 458784, 0, 0, 458785, 0, 0, 458786, 0, 0, 458787, 0, 0, 458788, 0, 0, 458789, 0, 0, 458790, 0, 0, 458791, 0, 0, 458792, 0, 0, 458793, 0, 0, 458794, 0, 0, 458795, 0, 0, 458796, 0, 0, 458797, 0, 0, 458798, 0, 0, 458799, 0, 0, 458800, 0, 0, 458801, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 0, 524321, 0, 0, 524322, 0, 0, 524323, 0, 0, 524324, 0, 0, 524325, 0, 0, 524326, 0, 0, 524327, 0, 0, 524328, 0, 0, 524329, 0, 0, 524330, 0, 0, 524331, 0, 0, 524332, 0, 0, 524333, 0, 0, 524334, 0, 0, 524335, 0, 0, 524336, 0, 0, 524337, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 589857, 0, 0, 589858, 0, 0, 589859, 0, 0, 589860, 0, 0, 589861, 0, 0, 589862, 0, 0, 589863, 0, 0, 589864, 0, 0, 589865, 0, 0, 589866, 0, 0, 589867, 0, 0, 589868, 0, 0, 589869, 0, 0, 589870, 0, 0, 589871, 0, 0, 589872, 0, 0, 589873, 0, 0, 655382, 0, 0, 655383, 0, 0, 655384, 0, 0, 655407, 0, 0, 655408, 0, 0, 655409, 0, 0, 720918, 0, 0, 720919, 0, 0, 720920, 0, 0, 720943, 0, 0, 720944, 0, 0, 720945, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786479, 0, 0, 786480, 0, 0, 786481, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 851994, 0, 0, 851995, 0, 0, 851996, 0, 0, 851997, 0, 0, 851998, 0, 0, 851999, 0, 0, 852000, 0, 0, 852015, 0, 0, 852016, 0, 0, 852017, 0, 0, 917526, 0, 0, 917527, 0, 0, 917528, 0, 0, 917551, 0, 0, 917552, 0, 0, 917553, 0, 0, 983062, 0, 0, 983063, 0, 0, 983064, 0, 0, 983075, 0, 0, 983076, 0, 0, 983077, 0, 0, 983078, 0, 0, 983079, 0, 0, 983087, 0, 0, 983088, 0, 0, 983089, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048621, 0, 0, 1048622, 0, 0, 1048623, 0, 0, 1048624, 0, 0, 1048625, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114155, 0, 0, 1114156, 0, 0, 1114157, 0, 0, 1114159, 0, 0, 1114160, 0, 0, 1114161, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179689, 0, 0, 1179690, 0, 0, 1179691, 0, 0, 1179695, 0, 0, 1179696, 0, 0, 1179697, 0, 0, 1179698, 0, 0, 1179699, 0, 0, 1179700, 0, 0, 1179701, 0, 0, 1179702, 0, 0, 1179703, 0, 0, 1179704, 0, 0, 1179705, 0, 0, 1179706, 0, 0, 1179707, 0, 0, 1179708, 0, 0, 1179709, 0, 0, 1179710, 0, 0, 1179711, 0, 0, 1179712, 0, 0, 1179713, 0, 0, 1179714, 0, 0, 1179715, 0, 0, 1179716, 0, 0, 1179717, 0, 0, 1179718, 0, 0, 1179719, 0, 0, 1179720, 0, 0, 1179721, 0, 0, 1179722, 0, 0, 1179723, 0, 0, 1179724, 0, 0, 1179725, 0, 0, 1179726, 0, 0, 1179727, 0, 0, 1179728, 0, 0, 1179729, 0, 0, 1179730, 0, 0, 1179731, 0, 0, 1179732, 0, 0, 1179733, 0, 0, 1245206, 0, 0, 1245207, 0, 0, 1245208, 0, 0, 1245223, 0, 0, 1245224, 0, 0, 1245225, 0, 0, 1245231, 0, 0, 1245232, 0, 0, 1245233, 0, 0, 1245234, 0, 0, 1245235, 0, 0, 1245236, 0, 0, 1245237, 0, 0, 1245238, 0, 0, 1245239, 0, 0, 1245240, 0, 0, 1245241, 0, 0, 1245242, 0, 0, 1245243, 0, 0, 1245244, 0, 0, 1245245, 0, 0, 1245246, 0, 0, 1245247, 0, 0, 1245248, 0, 0, 1245249, 0, 0, 1245250, 0, 0, 1245251, 0, 0, 1245252, 0, 0, 1245253, 0, 0, 1245254, 0, 0, 1245255, 0, 0, 1245256, 0, 0, 1245257, 0, 0, 1245258, 0, 0, 1245259, 0, 0, 1245260, 0, 0, 1245261, 0, 0, 1245262, 0, 0, 1245263, 0, 0, 1245264, 0, 0, 1245265, 0, 0, 1245266, 0, 0, 1245267, 0, 0, 1245268, 0, 0, 1245269, 0, 0, 1310742, 0, 0, 1310743, 0, 0, 1310744, 0, 0, 1310757, 0, 0, 1310758, 0, 0, 1310759, 0, 0, 1310767, 0, 0, 1310768, 0, 0, 1310769, 0, 0, 1310770, 0, 0, 1310771, 0, 0, 1310772, 0, 0, 1310773, 0, 0, 1310774, 0, 0, 1310775, 0, 0, 1310776, 0, 0, 1310777, 0, 0, 1310778, 0, 0, 1310779, 0, 0, 1310780, 0, 0, 1310781, 0, 0, 1310782, 0, 0, 1310783, 0, 0, 1310784, 0, 0, 1310785, 0, 0, 1310786, 0, 0, 1310787, 0, 0, 1310788, 0, 0, 1310789, 0, 0, 1310790, 0, 0, 1310791, 0, 0, 1310792, 0, 0, 1310793, 0, 0, 1310794, 0, 0, 1310795, 0, 0, 1310796, 0, 0, 1310797, 0, 0, 1310798, 0, 0, 1310799, 0, 0, 1310800, 0, 0, 1310801, 0, 0, 1310802, 0, 0, 1310803, 0, 0, 1310804, 0, 0, 1310805, 0, 0, 1441790, 0, 0, 1441791, 0, 0, 1376256, 0, 0, 1376257, 0, 0, 1376258, 0, 0, 1376259, 0, 0, 1376260, 0, 0, 1376261, 0, 0, 1376262, 0, 0, 1376263, 0, 0, 1376264, 0, 0, 1376265, 0, 0, 1376266, 0, 0, 1376267, 0, 0, 1376268, 0, 0, 1376269, 0, 0, 1376270, 0, 0, 1376271, 0, 0, 1376272, 0, 0, 1376273, 0, 0, 1376274, 0, 0, 1376275, 0, 0, 1376276, 0, 0, 1376277, 0, 0, 1376278, 0, 0, 1376279, 0, 0, 1376280, 0, 0, 1376291, 0, 0, 1376292, 0, 0, 1376293, 0, 0, 1376303, 0, 0, 1376304, 0, 0, 1376305, 0, 0, 1376306, 0, 0, 1376307, 0, 0, 1376308, 0, 0, 1376309, 0, 0, 1376310, 0, 0, 1376311, 0, 0, 1376312, 0, 0, 1376313, 0, 0, 1376314, 0, 0, 1376315, 0, 0, 1376316, 0, 0, 1376317, 0, 0, 1376318, 0, 0, 1376319, 0, 0, 1376320, 0, 0, 1376321, 0, 0, 1376322, 0, 0, 1376323, 0, 0, 1376324, 0, 0, 1376325, 0, 0, 1376326, 0, 0, 1376327, 0, 0, 1376328, 0, 0, 1376329, 0, 0, 1376330, 0, 0, 1376331, 0, 0, 1376332, 0, 0, 1376333, 0, 0, 1376334, 0, 0, 1376335, 0, 0, 1376336, 0, 0, 1376337, 0, 0, 1376338, 0, 0, 1376339, 0, 0, 1376340, 0, 0, 1376341, 0, 0, 1507326, 0, 0, 1507327, 0, 0, 1441792, 0, 0, 1441793, 0, 0, 1441794, 0, 0, 1441795, 0, 0, 1441796, 0, 0, 1441797, 0, 0, 1441798, 0, 0, 1441799, 0, 0, 1441800, 0, 0, 1441801, 0, 0, 1441802, 0, 0, 1441803, 0, 0, 1441804, 0, 0, 1441805, 0, 0, 1441806, 0, 0, 1441807, 0, 0, 1441808, 0, 0, 1441809, 0, 0, 1441810, 0, 0, 1441811, 0, 0, 1441812, 0, 0, 1441813, 0, 0, 1441814, 0, 0, 1441815, 0, 0, 1441816, 0, 0, 1441825, 0, 0, 1441826, 0, 0, 1441827, 0, 0, 1441839, 0, 0, 1441840, 0, 0, 1441875, 0, 0, 1441876, 0, 0, 1441877, 0, 0, 1572862, 0, 0, 1572863, 0, 0, 1507328, 0, 0, 1507329, 0, 0, 1507330, 0, 0, 1507331, 0, 0, 1507332, 0, 0, 1507333, 0, 0, 1507334, 0, 0, 1507335, 0, 0, 1507336, 0, 0, 1507337, 0, 0, 1507338, 0, 0, 1507339, 0, 0, 1507340, 0, 0, 1507341, 0, 0, 1507342, 0, 0, 1507343, 0, 0, 1507344, 0, 0, 1507345, 0, 0, 1507346, 0, 0, 1507347, 0, 0, 1507348, 0, 0, 1507349, 0, 0, 1507350, 0, 0, 1507351, 0, 0, 1507352, 0, 0, 1507359, 0, 0, 1507360, 0, 0, 1507361, 0, 0, 1507375, 0, 0, 1507376, 0, 0, 1507411, 0, 0, 1507412, 0, 0, 1507413, 0, 0, 1638398, 0, 0, 1638399, 0, 0, 1572864, 0, 0, 1572887, 0, 0, 1572888, 0, 0, 1572893, 0, 0, 1572894, 0, 0, 1572895, 0, 0, 1572911, 0, 0, 1572912, 0, 0, 1572947, 0, 0, 1572948, 0, 0, 1572949, 0, 0, 1703934, 0, 0, 1703935, 0, 0, 1638400, 0, 0, 1638423, 0, 0, 1638424, 0, 0, 1638447, 0, 0, 1638448, 0, 0, 1638483, 0, 0, 1638484, 0, 0, 1638485, 0, 0, 1769470, 0, 0, 1769471, 0, 0, 1703936, 0, 0, 1703959, 0, 0, 1703960, 0, 0, 1703983, 0, 0, 1703984, 0, 0, 1704019, 0, 0, 1704020, 0, 0, 1704021, 0, 0, 1835006, 0, 0, 1835007, 0, 0, 1769472, 0, 0, 1769495, 0, 0, 1769496, 0, 0, 1769497, 0, 0, 1769498, 0, 0, 1769499, 0, 0, 1769500, 0, 0, 1769501, 0, 0, 1769502, 0, 0, 1769503, 0, 0, 1769504, 0, 0, 1769505, 0, 0, 1769506, 0, 0, 1769512, 0, 0, 1769513, 0, 0, 1769514, 0, 0, 1769519, 0, 0, 1769520, 0, 0, 1769555, 0, 0, 1769556, 0, 0, 1769557, 0, 0, 1900542, 0, 0, 1900543, 0, 0, 1835008, 0, 0, 1835031, 0, 0, 1835032, 0, 0, 1835055, 0, 0, 1835056, 0, 0, 1835067, 0, 0, 1835068, 0, 0, 1835076, 0, 0, 1835077, 0, 0, 1835091, 0, 0, 1835092, 0, 0, 1835093, 0, 0, 1966078, 0, 0, 1966079, 0, 0, 1900544, 0, 0, 1900567, 0, 0, 1900568, 0, 0, 1900591, 0, 0, 1900592, 0, 0, 1900627, 0, 0, 1900628, 0, 0, 1900629, 0, 0, 2031614, 0, 0, 2031615, 0, 0, 1966080, 0, 0, 1966103, 0, 0, 1966104, 0, 0, 1966122, 0, 0, 1966123, 0, 0, 1966124, 0, 0, 1966133, 0, 0, 1966134, 0, 0, 1966135, 0, 0, 1966153, 0, 0, 1966154, 0, 0, 1966155, 0, 0, 1966163, 0, 0, 1966164, 0, 0, 1966165, 0, 0, 2097150, 0, 0, 2097151, 0, 0, 2031616, 0, 0, 2031639, 0, 0, 2031640, 0, 0, 2031668, 0, 0, 2031669, 0, 0, 2031670, 0, 0, 2031671, 0, 0, 2031689, 0, 0, 2031690, 0, 0, 2031691, 0, 0, 2031692, 0, 0, 2031699, 0, 0, 2031700, 0, 0, 2031701, 0, 0, 2162686, 0, 0, 2162687, 0, 0, 2097152, 0, 0, 2097175, 0, 0, 2097176, 0, 0, 2097203, 0, 0, 2097204, 0, 0, 2097205, 0, 0, 2097206, 0, 0, 2097207, 0, 0, 2097225, 0, 0, 2097226, 0, 0, 2097227, 0, 0, 2097228, 0, 0, 2097229, 0, 0, 2097235, 0, 0, 2097236, 0, 0, 2097237, 0, 0, 2228222, 0, 0, 2228223, 0, 0, 2162688, 0, 0, 2162711, 0, 0, 2162712, 0, 0, 2162731, 0, 0, 2162732, 0, 0, 2162733, 0, 0, 2162734, 0, 0, 2162735, 0, 0, 2162736, 0, 0, 2162737, 0, 0, 2162738, 0, 0, 2162739, 0, 0, 2162740, 0, 0, 2162741, 0, 0, 2162742, 0, 0, 2162743, 0, 0, 2162744, 0, 0, 2162745, 0, 0, 2162746, 0, 0, 2162747, 0, 0, 2162748, 0, 0, 2162749, 0, 0, 2162750, 0, 0, 2162751, 0, 0, 2162752, 0, 0, 2162753, 0, 0, 2162754, 0, 0, 2162755, 0, 0, 2162756, 0, 0, 2162757, 0, 0, 2162758, 0, 0, 2162759, 0, 0, 2162760, 0, 0, 2162761, 0, 0, 2162762, 0, 0, 2162763, 0, 0, 2162764, 0, 0, 2162765, 0, 0, 2162766, 0, 0, 2162767, 0, 0, 2162768, 0, 0, 2162769, 0, 0, 2162770, 0, 0, 2162771, 0, 0, 2162772, 0, 0, 2162773, 0, 0, 2293758, 0, 0, 2293759, 0, 0, 2228224, 0, 0, 2228265, 0, 0, 2228266, 0, 0, 2228267, 0, 0, 2228268, 0, 0, 2228269, 0, 0, 2228270, 0, 0, 2228271, 0, 0, 2228272, 0, 0, 2228273, 0, 0, 2228274, 0, 0, 2228275, 0, 0, 2228276, 0, 0, 2228277, 0, 0, 2228278, 0, 0, 2228279, 0, 0, 2228280, 0, 0, 2228281, 0, 0, 2228282, 0, 0, 2228283, 0, 0, 2228284, 0, 0, 2228285, 0, 0, 2228286, 0, 0, 2228287, 0, 0, 2228288, 0, 0, 2228289, 0, 0, 2228290, 0, 0, 2228291, 0, 0, 2228292, 0, 0, 2228293, 0, 0, 2228294, 0, 0, 2228295, 0, 0, 2228296, 0, 0, 2228297, 0, 0, 2228298, 0, 0, 2228299, 0, 0, 2228300, 0, 0, 2228301, 0, 0, 2228302, 0, 0, 2228303, 0, 0, 2228304, 0, 0, 2228305, 0, 0, 2228306, 0, 0, 2228307, 0, 0, 2228308, 0, 0, 2228309, 0, 0, 2359294, 0, 0, 2359295, 0, 0, 2293760, 0, 0, 2293793, 0, 0, 2293794, 0, 0, 2293795, 0, 0, 2293796, 0, 0, 2293797, 0, 0, 2293798, 0, 0, 2293799, 0, 0, 2293800, 0, 0, 2293801, 0, 0, 2293802, 0, 0, 2293803, 0, 0, 2293804, 0, 0, 2293805, 0, 0, 2293806, 0, 0, 2293807, 0, 0, 2293808, 0, 0, 2293809, 0, 0, 2293810, 0, 0, 2293811, 0, 0, 2293812, 0, 0, 2293813, 0, 0, 2293814, 0, 0, 2293815, 0, 0, 2293816, 0, 0, 2293817, 0, 0, 2293818, 0, 0, 2293819, 0, 0, 2293820, 0, 0, 2293821, 0, 0, 2293822, 0, 0, 2293823, 0, 0, 2293824, 0, 0, 2293825, 0, 0, 2293826, 0, 0, 2293827, 0, 0, 2293828, 0, 0, 2293829, 0, 0, 2293830, 0, 0, 2293831, 0, 0, 2293832, 0, 0, 2293833, 0, 0, 2293834, 0, 0, 2293835, 0, 0, 2293836, 0, 0, 2293837, 0, 0, 2293838, 0, 0, 2293839, 0, 0, 2293840, 0, 0, 2293841, 0, 0, 2293842, 0, 0, 2293843, 0, 0, 2293844, 0, 0, 2293845, 0, 0, 2424830, 0, 0, 2424831, 0, 0, 2359296, 0, 0, 2359297, 0, 0, 2359298, 0, 0, 2359299, 0, 0, 2359300, 0, 0, 2359301, 0, 0, 2359302, 0, 0, 2359303, 0, 0, 2359304, 0, 0, 2359305, 0, 0, 2359306, 0, 0, 2359307, 0, 0, 2359308, 0, 0, 2359309, 0, 0, 2359310, 0, 0, 2359311, 0, 0, 2359312, 0, 0, 2359313, 0, 0, 2359314, 0, 0, 2359315, 0, 0, 2359316, 0, 0, 2359317, 0, 0, 2359318, 0, 0, 2359319, 0, 0, 2359320, 0, 0, 2359321, 0, 0, 2359322, 0, 0, 2359323, 0, 0, 2359324, 0, 0, 2359325, 0, 0, 2359326, 0, 0, 2359327, 0, 0, 2359328, 0, 0, 2359329, 0, 0, 2359330, 0, 0, 2359331, 0, 0, 2359332, 0, 0, 2359333, 0, 0, 2359334, 0, 0, 2359335, 0, 0, 2359336, 0, 0, 2359337, 0, 0, 2359338, 0, 0, 2359339, 0, 0, 2359340, 0, 0, 2359341, 0, 0, 2359342, 0, 0, 2359343, 0, 0, 2359344, 0, 0, 2359345, 0, 0, 2490366, 0, 0, 2490367, 0, 0, 2424832, 0, 0, 2424833, 0, 0, 2424834, 0, 0, 2424835, 0, 0, 2424836, 0, 0, 2424837, 0, 0, 2424838, 0, 0, 2424839, 0, 0, 2424840, 0, 0, 2424841, 0, 0, 2424842, 0, 0, 2424843, 0, 0, 2424844, 0, 0, 2424845, 0, 0, 2424846, 0, 0, 2424847, 0, 0, 2424848, 0, 0, 2424849, 0, 0, 2424850, 0, 0, 2424851, 0, 0, 2424852, 0, 0, 2424853, 0, 0, 2424854, 0, 0, 2424855, 0, 0, 2424856, 0, 0, 2424857, 0, 0, 2424858, 0, 0, 2424859, 0, 0, 2424860, 0, 0, 2424861, 0, 0, 2424862, 0, 0, 2424863, 0, 0, 2424864, 0, 0, 2424865, 0, 0, 2424866, 0, 0, 2424867, 0, 0, 2424868, 0, 0, 2424869, 0, 0, 2424870, 0, 0, 2424871, 0, 0, 2424872, 0, 0, 2424873, 0, 0, 2424874, 0, 0, 2424875, 0, 0, 2424876, 0, 0, 2424877, 0, 0, 2424878, 0, 0, 2424879, 0, 0, 2424880, 0, 0, 2424881, 0, 0, 2555902, 0, 0, 2555903, 0, 0, 2490368, 0, 0, 2490369, 0, 0, 2490370, 0, 0, 2490371, 0, 0, 2490372, 0, 0, 2490373, 0, 0, 2490374, 0, 0, 2490375, 0, 0, 2490376, 0, 0, 2490377, 0, 0, 2490378, 0, 0, 2490379, 0, 0, 2490380, 0, 0, 2490381, 0, 0, 2490382, 0, 0, 2490383, 0, 0, 2490384, 0, 0, 2490385, 0, 0, 2490386, 0, 0, 2490387, 0, 0, 2490388, 0, 0, 2490389, 0, 0, 2490390, 0, 0, 2490391, 0, 0, 2490392, 0, 0, 2490393, 0, 0, 2490394, 0, 0, 2490395, 0, 0, 2490396, 0, 0, 2490397, 0, 0, 2490398, 0, 0, 2490399, 0, 0, 2490400, 0, 0, 2490401, 0, 0, 2490402, 0, 0, 2490403, 0, 0, 2490404, 0, 0, 2490405, 0, 0, 2490406, 0, 0, 2490407, 0, 0, 2490408, 0, 0, 2490409, 0, 0, 2490410, 0, 0, 2490411, 0, 0, 2490412, 0, 0, 2490413, 0, 0, 2490414, 0, 0, 2490415, 0, 0, 2490416, 0, 0, 2490417, 0, 0 )

[node name="Rooms" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Room01" type="Node2D" parent="Rooms"]

[node name="room" type="Area2D" parent="Rooms/Room01"]
position = Vector2( 768, 1920 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rooms/Room01/room"]
shape = SubResource( 3 )

[node name="shrine" type="Node2D" parent="Rooms/Room01"]

[node name="shrine1" parent="Rooms/Room01/shrine" instance=ExtResource( 7 )]
position = Vector2( 288, 2208 )

[node name="shrine2" parent="Rooms/Room01/shrine" instance=ExtResource( 7 )]
position = Vector2( 928, 2208 )

[node name="Room02" type="Node2D" parent="Rooms"]

[node name="room" type="Area2D" parent="Rooms/Room02"]
position = Vector2( 2304, 1472 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rooms/Room02/room"]
shape = SubResource( 2 )

[node name="enemies" type="Node2D" parent="Rooms/Room02"]

[node name="enemy_spawner" parent="Rooms/Room02/enemies" instance=ExtResource( 9 )]
position = Vector2( 2336, 2208 )
enemy = ExtResource( 10 )

[node name="enemy_spawner2" parent="Rooms/Room02/enemies" instance=ExtResource( 9 )]
position = Vector2( 1920, 1696 )
enemy = ExtResource( 10 )

[node name="enemy_spawner3" parent="Rooms/Room02/enemies" instance=ExtResource( 9 )]
position = Vector2( 2400, 928 )
enemy = ExtResource( 10 )

[node name="items" type="Node2D" parent="Rooms/Room02"]

[node name="yellow_door" parent="Rooms/Room02/items" instance=ExtResource( 3 )]
position = Vector2( 3008, 1920 )

[node name="yellow_key" parent="Rooms/Room02/items" instance=ExtResource( 5 )]
position = Vector2( 1824, 792 )

[node name="Room03" type="Node2D" parent="Rooms"]

[node name="room" type="Area2D" parent="Rooms/Room03"]
position = Vector2( 4224, 1728 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rooms/Room03/room"]
shape = SubResource( 1 )

[node name="statics" type="Node2D" parent="Rooms/Room03"]
position = Vector2( -72, 32 )

[node name="spike" parent="Rooms/Room03/statics" instance=ExtResource( 8 )]
position = Vector2( 3688, 2048 )

[node name="spike2" parent="Rooms/Room03/statics" instance=ExtResource( 8 )]
position = Vector2( 3752, 2048 )

[node name="spike3" parent="Rooms/Room03/statics" instance=ExtResource( 8 )]
position = Vector2( 3816, 2048 )

[node name="spike4" parent="Rooms/Room03/statics" instance=ExtResource( 8 )]
position = Vector2( 3880, 2048 )

[node name="spike5" parent="Rooms/Room03/statics" instance=ExtResource( 8 )]
position = Vector2( 3944, 2048 )

[node name="spike6" parent="Rooms/Room03/statics" instance=ExtResource( 8 )]
position = Vector2( 4008, 2048 )

[node name="spike7" parent="Rooms/Room03/statics" instance=ExtResource( 8 )]
position = Vector2( 4072, 2048 )

[node name="spike8" parent="Rooms/Room03/statics" instance=ExtResource( 8 )]
position = Vector2( 4136, 2048 )

[node name="spike9" parent="Rooms/Room03/statics" instance=ExtResource( 8 )]
position = Vector2( 4200, 2048 )

[node name="spike10" parent="Rooms/Room03/statics" instance=ExtResource( 8 )]
position = Vector2( 4264, 2048 )

[node name="spike11" parent="Rooms/Room03/statics" instance=ExtResource( 8 )]
position = Vector2( 4328, 2048 )

[node name="spike12" parent="Rooms/Room03/statics" instance=ExtResource( 8 )]
position = Vector2( 4392, 2048 )

[node name="spike13" parent="Rooms/Room03/statics" instance=ExtResource( 8 )]
position = Vector2( 4456, 2048 )

[node name="spike14" parent="Rooms/Room03/statics" instance=ExtResource( 8 )]
position = Vector2( 4520, 2048 )

[node name="spike15" parent="Rooms/Room03/statics" instance=ExtResource( 8 )]
position = Vector2( 4584, 2048 )

[node name="spike16" parent="Rooms/Room03/statics" instance=ExtResource( 8 )]
position = Vector2( 4648, 2048 )

[node name="spike17" parent="Rooms/Room03/statics" instance=ExtResource( 8 )]
position = Vector2( 4712, 2048 )

[node name="Label" type="Label" parent="Rooms/Room03"]
margin_left = 5048.0
margin_top = 1968.0
margin_right = 5098.0
margin_bottom = 1982.0
rect_scale = Vector2( 4.06124, 4.06124 )
text = "The End"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 600, 2272 )

[node name="camera" type="Camera2D" parent="player"]
zoom = Vector2( 1.5, 1.5 )
limit_left = -1000000
limit_top = -1000000
limit_right = 100000
limit_bottom = 100000
limit_smoothed = true
smoothing_enabled = true
offset_v = -0.5
editor_draw_limits = true
editor_draw_drag_margin = true
__meta__ = {
"_edit_lock_": true
}

[node name="info_hud" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="player_panel" type="Panel" parent="info_hud"]
self_modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 8.0
margin_top = 144.0
margin_right = 272.0
margin_bottom = 264.0
rect_pivot_offset = Vector2( 80, 80 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="double" type="Label" parent="info_hud/player_panel"]
margin_left = 40.0
margin_top = 40.0
margin_right = 216.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 8, 16 )
text = "double:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="double_toggle" type="Button" parent="info_hud/player_panel"]
margin_left = 8.0
margin_top = 40.0
margin_right = 32.0
margin_bottom = 64.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="float" type="Label" parent="info_hud/player_panel"]
margin_left = 40.0
margin_top = 8.0
margin_right = 216.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 8, 16 )
text = "float:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="float_toggle" type="Button" parent="info_hud/player_panel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 32.0
margin_bottom = 32.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="data" type="Label" parent="info_hud/player_panel"]
margin_left = 8.0
margin_top = 72.0
margin_right = 184.0
margin_bottom = 96.0
text = "misc data"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info_panel" type="Panel" parent="info_hud"]
self_modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 8.0
margin_top = 8.0
margin_right = 272.0
margin_bottom = 136.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yellow_key" type="Label" parent="info_hud/info_panel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 184.0
margin_bottom = 32.0
text = "yellow key"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shrine" type="Label" parent="info_hud/info_panel"]
margin_left = 8.0
margin_top = 32.0
margin_right = 184.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 24, 32 )
text = "shrine"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="room" type="Label" parent="info_hud/info_panel"]
margin_left = 8.0
margin_top = 56.0
margin_right = 184.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 24, 32 )
text = "room"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="INFO" type="Label" parent="info_hud/info_panel"]
margin_left = 8.0
margin_top = 96.0
margin_right = 256.0
margin_bottom = 120.0
text = "* Press 'Jump' to respawn after death"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="map" type="CanvasLayer" parent="."]
script = ExtResource( 11 )

[node name="map_panel" type="Panel" parent="map"]
self_modulate = Color( 1, 1, 1, 0.588235 )
margin_left = 105.0
margin_top = 64.0
margin_right = 892.0
margin_bottom = 520.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="screensize" type="Polygon2D" parent="."]
position = Vector2( -2456, 528 )
color = Color( 1, 1, 1, 0.196078 )
polygon = PoolVector2Array( 0, 0, 1536, 0, 1536, 896, 0, 896 )

[connection signal="body_entered" from="Rooms/Room01/room" to="Rooms/Room01/room" method="_on_room_body_entered"]
[connection signal="body_exited" from="Rooms/Room01/room" to="Rooms/Room01/room" method="_on_room_body_exited"]
[connection signal="body_entered" from="Rooms/Room02/room" to="Rooms/Room02/room" method="_on_room_body_entered"]
[connection signal="body_exited" from="Rooms/Room02/room" to="Rooms/Room02/room" method="_on_room_body_exited"]
[connection signal="body_entered" from="Rooms/Room03/room" to="Rooms/Room03/room" method="_on_room_body_entered"]
[connection signal="body_exited" from="Rooms/Room03/room" to="Rooms/Room03/room" method="_on_room_body_exited"]
[connection signal="pressed" from="info_hud/player_panel/double_toggle" to="info_hud" method="_on_double_toggle_pressed"]
[connection signal="pressed" from="info_hud/player_panel/float_toggle" to="info_hud" method="_on_float_toggle_pressed"]
